Get this version working.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312809 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/oracle.properties
+++ b/impl/src/resources/oracle.properties
@@ -10,6 +10,43 @@ select.things = select * from PROJECT_THINGS
 
 insert.thing = insert into PROJECT_THINGS (ID, TITLE) values (PROJECT_THINGS_SEQ.nextval, ?)
 
+create.calendar_item.table = create table dash_calendar_item ( id number not null primary key, calendar_time timestamp(0) not null, title varchar2(255) not null, access_url varchar2(1024) not null, entity_ref varchar2(300) not null, source_type number not null, context number not null, realm number not null ); \
+create sequence dash_calendar_item_seq start with 1 increment by 1 nomaxvalue; \
+create index dash_calendar_time_idx on dash_calendar_item (calendar_time); \
+create unique index dash_calendar_entity_idx on dash_calendar_item (entity_ref);
+
+insert.calendar_item = insert into dash_calendar_item (id, calendar_time, title , access_url, entity_ref, source_type, context, realm) values (dash_calendar_item_seq.nextval, ?, ?, ?, ?, ?, ?, ?);
+
+select.calendar_item.by.id = select * from dash_calendar_item where id=?;
+
+create.calendar_link.table = create table dash_calendar_link ( id number not null primary key, person_id number not null, context_id number not null, item_id number not null, realm_id number, hidden number(1,0) default 0, sticky number(1,0) default 0, unique (person_id, context_id, item_id) ); \
+create sequence dash_calendar_link_seq start with 1 increment by 1 nomaxvalue; \
+create index dash_calendar_link_idx on dash_calendar_link (person_id, context_id, item_id, hidden, sticky);
+
+insert.calendar_link = insert into dash_calendar_link (id, person_id, item_id, context_id, realm_id) values (dash_calendar_link_seq.nextval, ?, ?, ?, ?);
+
+create.context.table = create table dash_context ( id number not null primary key, context_id varchar2(255) not null, context_url varchar2(1024) not null, context_title varchar2(255) not null ); \
+create sequence dash_context_seq start with 1 increment by 1 nomaxvalue; \
+create unique index dash_context_idx on dash_context (context_id);
+
+insert.context = insert into dash_context (id, context_id, context_url, context_title) values (dash_context_seq.nextval, ?, ?, ?);
+
+select.context.by.id = select * from dash_context where id=?;
+select.context.by.context_id = select * from dash_context where context_id=?;
+
+create.news_item.table = create table dash_news_item ( id number not null primary key, news_time timestamp(0), title varchar2(255) not null, access_url varchar2(1024) not null, entity_ref varchar2(300) not null, entity_type number not null, context_id number not null, realm_id number not null ); \
+create sequence dash_news_item_seq start with 1 increment by 1 nomaxvalue; \
+create index dash_news_time_idx on dash_news_item (news_time); \
+create unique index dash_news_entity_idx on dash_news_item (entity_ref);
+
+insert.news_item = insert into dash_news_item (id, news_time, title , access_url, entity_ref, source_type, context, realm) values (dash_news_item_seq.nextval, ?, ?, ?, ?, ?, ?, ?);
+
+create.news_link.table = create table dash_news_link ( id number not null primary key, person_id number not null, context_id number not null, item_id number not null, realm_id number, hidden number(1,0) default 0, sticky number(1,0) default 0, unique (person_id, context_id, item_id) ); \
+create sequence dash_news_link_seq start with 1 increment by 1 nomaxvalue; \
+create index dash_news_link_idx on dash_news_link (person_id, context_id, item_id, hidden, sticky);
+
+insert.news_link = insert into dash_news_link (id, person_id, item_id, context_id, realm_id) values (dash_news_link_seq.nextval, ?, ?, ?, ?);
+
 create.person.table = create table dash_person ( id number not null primary key,user_id varchar2(99) not null,sakai_id varchar2(99) ); \
 create sequence dash_person_seq start with 1 increment by 1 nomaxvalue; \
 create unique index dash_person_user_id_idx on dash_person (user_id); \
@@ -21,15 +58,6 @@ select.person.by.id = select * from dash_person where id=?;
 select.person.by.user_id = select * from dash_person where user_id=?;
 select.person.by.sakai_id = select * from dash_person where sakai_id=?;
 
-create.sourcetype.table = create table dash_sourcetype ( id number not null primary key, name varchar2(255) not null, save_calendar_item number(1,0) default 0, save_news_item number(1,0) default 0, calendar_format varchar2(4000), calendar_summary_format varchar2(4000), news_format varchar2(4000), news_summary_format varchar2(4000) ); \
-create sequence dash_sourcetype_seq start with 1 increment by 1 nomaxvalue; \
-create unique index dash_source_idx on dash_sourcetype (name); 
-
-insert.sourcetype = insert into dash_sourcetype ( id, name, save_calendar_item, save_news_item, calendar_format, calendar_summary_format, news_format, news_summary_format) values (dash_sourcetype_seq.nextval, ?, ?, ?, ?, ?, ?, ?)
-
-select.sourcetype.by.id = select * from dash_sourcetype where id=?;
-select.sourcetype.by.name = select * from dash_sourcetype where name=?;
-
 create.realm.table = create table dash_realm ( id number not null primary key, realm_id varchar2(255) not null ); \
 create sequence dash_realm_seq start with 1 increment by 1 nomaxvalue; \
 create unique index dash_realm_idx on dash_realm (realm_id);
@@ -39,41 +67,14 @@ insert.realm = insert into dash_realm (id, realm_id) values (dash_realm_seq.next
 select.realm.by.id = select * from dash_realm where id=?;
 select.realm.by.realm_id = select * from dash_realm where realm_id=?;
 
-create.context.table = create table dash_context ( id number not null primary key, context_id varchar2(255) not null, context_url varchar2(1024) not null, context_title varchar2(255) not null ); \
-create sequence dash_context_seq start with 1 increment by 1 nomaxvalue; \
-create unique index dash_context_idx on dash_context (context_id);
+create.sourcetype.table = create table dash_sourcetype ( id number not null primary key, name varchar2(255) not null, save_calendar_item number(1,0) default 0, save_news_item number(1,0) default 0, calendar_format varchar2(4000), calendar_summary_format varchar2(4000), news_format varchar2(4000), news_summary_format varchar2(4000) ); \
+create sequence dash_sourcetype_seq start with 1 increment by 1 nomaxvalue; \
+create unique index dash_source_idx on dash_sourcetype (name); 
 
-insert.context = insert into dash_context (id, context_id, context_url, context_title) values (dash_context_seq.nextval, ?, ?, ?);
+insert.sourcetype = insert into dash_sourcetype ( id, name, save_calendar_item, save_news_item, calendar_format, calendar_summary_format, news_format, news_summary_format) values (dash_sourcetype_seq.nextval, ?, ?, ?, ?, ?, ?, ?)
 
-select.context.by.id = select * from dash_context where id=?;
-select.context.by.context_id = select * from dash_context where context_id=?;
+select.sourcetype.by.id = select * from dash_sourcetype where id=?;
+select.sourcetype.by.name = select * from dash_sourcetype where name=?;
 
-create.calendar_item.table = create table dash_calendar_item ( id number not null primary key, calendar_time timestamp(0) not null, title varchar2(255) not null, access_url varchar2(1024) not null, entity_ref varchar2(300) not null, source_type number not null, context number not null, realm number not null ); \
-create sequence dash_calendar_item_seq start with 1 increment by 1 nomaxvalue; \
-create index dash_calendar_time_idx on dash_calendar_item (calendar_time); \
-create unique index dash_calendar_entity_idx on dash_calendar_item (entity_ref);
-
-insert.calendar_item = insert into dash_calendar_item (id, calendar_time, title , access_url, entity_ref, source_type, context, realm) values (dash_calendar_item_seq.nextval, ?, ?, ?, ?, ?, ?, ?);
-
-select.calendar_item.by.id = select * from dash_calendar_item where id=?;
-
-create.news_item.table = create table dash_news_item ( id number not null primary key, news_time timestamp(0), title varchar2(255) not null, access_url varchar2(1024) not null, entity_ref varchar2(300) not null, entity_type number not null, context_id number not null, realm_id number not null ); \
-create sequence dash_news_item_seq start with 1 increment by 1 nomaxvalue; \
-create index dash_news_time_idx on dash_news_item (news_time); \
-create unique index dash_news_entity_idx on dash_news_item (entity_ref);
-
-insert.news_item = insert into dash_news_item (id, news_time, title , access_url, entity_ref, source_type, context, realm) values (dash_news_item_seq.nextval, ?, ?, ?, ?, ?, ?, ?);
-
-create.calendar_link.table = create table dash_calendar_link ( id number not null primary key, person_id number not null, item_id number not null, context_id number not null, realm_id number not null, hidden number(1,0) default 0, sticky number(1,0) default 0, unique (person_id, context_id, item_id) ); \
-create sequence dash_calendar_link_seq start with 1 increment by 1 nomaxvalue; \
-create index dash_calendar_link_idx on dash_calendar_link (person_id, context_id, item_id, hidden, sticky);
-
-insert.calendar_link = insert into dash_calendar_link (id, person_id, item_id, context_id, realm_id) values (dash_calendar_link_seq.nextval, ?, ?, ?, ?);
-
-create.news_link.table = create table dash_news_link ( id number not null primary key, person_id number not null, context_id number not null, item_id number not null, realm_id number, hidden number(1,0) default 0, sticky number(1,0) default 0, unique (person_id, context_id, item_id) ); \
-create sequence dash_news_link_seq start with 1 increment by 1 nomaxvalue; \
-create index dash_news_link_idx on dash_news_link (person_id, context_id, item_id, hidden, sticky);
-
-insert.news_link = insert into dash_news_link (id, person_id, item_id, context_id, realm_id) values (dash_news_link_seq.nextval, ?, ?, ?, ?);
 
 
