Moved logic related to specific entities into the EventProcessor impls for those entities. Completed implementation of some method stubs. Added more API methods and local utility methods for common functions.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312811 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/oracle.properties
+++ b/impl/src/resources/oracle.properties
@@ -67,11 +67,11 @@ insert.realm = insert into dash_realm (id, realm_id) values (dash_realm_seq.next
 select.realm.by.id = select * from dash_realm where id=?;
 select.realm.by.realm_id = select * from dash_realm where realm_id=?;
 
-create.sourcetype.table = create table dash_sourcetype ( id number not null primary key, name varchar2(255) not null, save_calendar_item number(1,0) default 0, save_news_item number(1,0) default 0, calendar_format varchar2(4000), calendar_summary_format varchar2(4000), news_format varchar2(4000), news_summary_format varchar2(4000) ); \
+create.sourcetype.table = create table dash_sourcetype ( id number not null primary key, name varchar2(255) not null ); \
 create sequence dash_sourcetype_seq start with 1 increment by 1 nomaxvalue; \
 create unique index dash_source_idx on dash_sourcetype (name); 
 
-insert.sourcetype = insert into dash_sourcetype ( id, name, save_calendar_item, save_news_item, calendar_format, calendar_summary_format, news_format, news_summary_format) values (dash_sourcetype_seq.nextval, ?, ?, ?, ?, ?, ?, ?)
+insert.sourcetype = insert into dash_sourcetype ( id, name) values (dash_sourcetype_seq.nextval, ?)
 
 select.sourcetype.by.id = select * from dash_sourcetype where id=?;
 select.sourcetype.by.name = select * from dash_sourcetype where name=?;
