Added more method impls, better SQL, and expressive strings of ascii characters.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312812 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/oracle.properties
+++ b/impl/src/resources/oracle.properties
@@ -17,7 +17,17 @@ create unique index dash_calendar_entity_idx on dash_calendar_item (entity_ref);
 
 insert.calendar_item = insert into dash_calendar_item (id, calendar_time, title , access_url, entity_ref, source_type, context, realm) values (dash_calendar_item_seq.nextval, ?, ?, ?, ?, ?, ?, ?);
 
-select.calendar_item.by.id = select * from dash_calendar_item where id=?;
+select.calendar_item.by.id = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.title as ci_title, ci.access_url as ci_access_url, \
+ci.entity_ref as ci_entity_ref, st.id as type_id, st.name as type_name, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title, r.id as r_id, r.realm_id as r_realm_id \
+join dash_sourcetype st on st.id=ci.source_type where ci.id=?;
+select.calendar_item.by.entityReference = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.title as ci_title, ci.access_url as ci_access_url, \
+ci.entity_ref as ci_entity_ref, st.id as type_id, st.name as type_name, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title, r.id as r_id, r.realm_id as r_realm_id \
+from dash_calendar_item ci join dash_context site on site.id=ci.context join dash_realm r on r.id=ci.realm \
+join dash_sourcetype st on st.id=ci.source_type where ci.entity_ref=?;
+exists.calendar_item.by.id = select * from dash_calendar_item where id=?;
+exists.calendar_item.by.entityReference = select * from dash_calendar_item where entity_ref=?;
 
 create.calendar_link.table = create table dash_calendar_link ( id number not null primary key, person_id number not null, context_id number not null, item_id number not null, realm_id number, hidden number(1,0) default 0, sticky number(1,0) default 0, unique (person_id, context_id, item_id) ); \
 create sequence dash_calendar_link_seq start with 1 increment by 1 nomaxvalue; \
