--- a/impl/src/resources/oracle.properties
+++ b/impl/src/resources/oracle.properties
@@ -10,81 +10,81 @@ select.things = select * from PROJECT_THINGS
 
 insert.thing = insert into PROJECT_THINGS (ID, TITLE) values (PROJECT_THINGS_SEQ.nextval, ?)
 
-create.calendar_item.table = create table dash_calendar_item ( id number not null primary key, calendar_time timestamp(0) not null, title varchar2(255) not null, access_url varchar2(1024) not null, entity_ref varchar2(300) not null, source_type number not null, context number not null, realm number not null ); \
+create.CalendarItem.table = create table dash_calendar_item ( id number not null primary key, calendar_time timestamp(0) not null, title varchar2(255) not null, access_url varchar2(1024) not null, entity_ref varchar2(300) not null, source_type number not null, context number not null, realm number not null ); \
 create sequence dash_calendar_item_seq start with 1 increment by 1 nomaxvalue; \
 create index dash_calendar_time_idx on dash_calendar_item (calendar_time); \
 create unique index dash_calendar_entity_idx on dash_calendar_item (entity_ref);
 
-insert.calendar_item = insert into dash_calendar_item (id, calendar_time, title , access_url, entity_ref, source_type, context, realm) values (dash_calendar_item_seq.nextval, ?, ?, ?, ?, ?, ?, ?);
+insert.CalendarItem = insert into dash_calendar_item (id, calendar_time, title , access_url, entity_ref, source_type, context, realm) values (dash_calendar_item_seq.nextval, ?, ?, ?, ?, ?, ?, ?);
 
-select.calendar_item.by.id = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.title as ci_title, ci.access_url as ci_access_url, \
+select.CalendarItem.by.id = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.title as ci_title, ci.access_url as ci_access_url, \
 ci.entity_ref as ci_entity_ref, st.id as type_id, st.name as type_name, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title, r.id as r_id, r.realm_id as r_realm_id \
 join dash_sourcetype st on st.id=ci.source_type where ci.id=?;
-select.calendar_item.by.entityReference = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.title as ci_title, ci.access_url as ci_access_url, \
+select.CalendarItem.by.entityReference = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.title as ci_title, ci.access_url as ci_access_url, \
 ci.entity_ref as ci_entity_ref, st.id as type_id, st.name as type_name, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title, r.id as r_id, r.realm_id as r_realm_id \
 from dash_calendar_item ci join dash_context site on site.id=ci.context join dash_realm r on r.id=ci.realm \
 join dash_sourcetype st on st.id=ci.source_type where ci.entity_ref=?;
-exists.calendar_item.by.id = select * from dash_calendar_item where id=?;
-exists.calendar_item.by.entityReference = select * from dash_calendar_item where entity_ref=?;
+exists.CalendarItem.by.id = select * from dash_calendar_item where id=?;
+exists.CalendarItem.by.entityReference = select * from dash_calendar_item where entity_ref=?;
 
-create.calendar_link.table = create table dash_calendar_link ( id number not null primary key, person_id number not null, context_id number not null, item_id number not null, realm_id number, hidden number(1,0) default 0, sticky number(1,0) default 0, unique (person_id, context_id, item_id) ); \
+create.CalendarLink.table = create table dash_calendar_link ( id number not null primary key, person_id number not null, context_id number not null, item_id number not null, realm_id number, hidden number(1,0) default 0, sticky number(1,0) default 0, unique (person_id, context_id, item_id) ); \
 create sequence dash_calendar_link_seq start with 1 increment by 1 nomaxvalue; \
 create index dash_calendar_link_idx on dash_calendar_link (person_id, context_id, item_id, hidden, sticky);
 
-insert.calendar_link = insert into dash_calendar_link (id, person_id, item_id, context_id, realm_id) values (dash_calendar_link_seq.nextval, ?, ?, ?, ?);
+insert.CalendarLink = insert into dash_calendar_link (id, person_id, item_id, context_id, realm_id) values (dash_calendar_link_seq.nextval, ?, ?, ?, ?);
 
-create.context.table = create table dash_context ( id number not null primary key, context_id varchar2(255) not null, context_url varchar2(1024) not null, context_title varchar2(255) not null ); \
+create.Context.table = create table dash_context ( id number not null primary key, context_id varchar2(255) not null, context_url varchar2(1024) not null, context_title varchar2(255) not null ); \
 create sequence dash_context_seq start with 1 increment by 1 nomaxvalue; \
 create unique index dash_context_idx on dash_context (context_id);
 
-insert.context = insert into dash_context (id, context_id, context_url, context_title) values (dash_context_seq.nextval, ?, ?, ?);
+insert.Context = insert into dash_context (id, context_id, context_url, context_title) values (dash_context_seq.nextval, ?, ?, ?);
 
-select.context.by.id = select * from dash_context where id=?;
-select.context.by.context_id = select * from dash_context where context_id=?;
+select.Context.by.id = select * from dash_context where id=?;
+select.Context.by.contextId = select * from dash_context where context_id=?;
 
-create.news_item.table = create table dash_news_item ( id number not null primary key, news_time timestamp(0), title varchar2(255) not null, access_url varchar2(1024) not null, entity_ref varchar2(300) not null, entity_type number not null, context_id number not null, realm_id number not null ); \
+create.NewsItem.table = create table dash_news_item ( id number not null primary key, news_time timestamp(0), title varchar2(255) not null, access_url varchar2(1024) not null, entity_ref varchar2(300) not null, entity_type number not null, context_id number not null, realm_id number not null ); \
 create sequence dash_news_item_seq start with 1 increment by 1 nomaxvalue; \
 create index dash_news_time_idx on dash_news_item (news_time); \
 create unique index dash_news_entity_idx on dash_news_item (entity_ref);
 
-insert.news_item = insert into dash_news_item (id, news_time, title , access_url, entity_ref, source_type, context, realm) values (dash_news_item_seq.nextval, ?, ?, ?, ?, ?, ?, ?);
+insert.NewsItem = insert into dash_news_item (id, news_time, title , access_url, entity_ref, source_type, context, realm) values (dash_news_item_seq.nextval, ?, ?, ?, ?, ?, ?, ?);
 
-create.news_link.table = create table dash_news_link ( id number not null primary key, person_id number not null, context_id number not null, item_id number not null, realm_id number, hidden number(1,0) default 0, sticky number(1,0) default 0, unique (person_id, context_id, item_id) ); \
+create.NewsLink.table = create table dash_news_link ( id number not null primary key, person_id number not null, context_id number not null, item_id number not null, realm_id number, hidden number(1,0) default 0, sticky number(1,0) default 0, unique (person_id, context_id, item_id) ); \
 create sequence dash_news_link_seq start with 1 increment by 1 nomaxvalue; \
 create index dash_news_link_idx on dash_news_link (person_id, context_id, item_id, hidden, sticky);
 
-insert.news_link = insert into dash_news_link (id, person_id, item_id, context_id, realm_id) values (dash_news_link_seq.nextval, ?, ?, ?, ?);
+insert.NewsLink = insert into dash_news_link (id, person_id, item_id, context_id, realm_id) values (dash_news_link_seq.nextval, ?, ?, ?, ?);
 
-create.person.table = create table dash_person ( id number not null primary key,user_id varchar2(99) not null,sakai_id varchar2(99) ); \
+create.Person.table = create table dash_person ( id number not null primary key,user_id varchar2(99) not null,sakai_id varchar2(99) ); \
 create sequence dash_person_seq start with 1 increment by 1 nomaxvalue; \
 create unique index dash_person_user_id_idx on dash_person (user_id); \
 create unique index dash_person_sakai_id_idx on dash_person (sakai_id);
 
-insert.person = insert into dash_person (id,user_id,sakai_id) values (dash_person_seq.nextval, ?, ?);
+insert.Person = insert into dash_person (id,user_id,sakai_id) values (dash_person_seq.nextval, ?, ?);
 
-select.person.by.id = select * from dash_person where id=?;
-select.person.by.user_id = select * from dash_person where user_id=?;
-select.person.by.sakai_id = select * from dash_person where sakai_id=?;
+select.Person.by.id = select * from dash_person where id=?;
+select.Person.by.userId = select * from dash_person where user_id=?;
+select.Person.by.sakaiId = select * from dash_person where sakai_id=?;
 
-create.realm.table = create table dash_realm ( id number not null primary key, realm_id varchar2(255) not null ); \
+create.Realm.table = create table dash_realm ( id number not null primary key, realm_id varchar2(255) not null ); \
 create sequence dash_realm_seq start with 1 increment by 1 nomaxvalue; \
 create unique index dash_realm_idx on dash_realm (realm_id);
 
-insert.realm = insert into dash_realm (id, realm_id) values (dash_realm_seq.nextval, ?)
+insert.Realm = insert into dash_realm (id, realm_id) values (dash_realm_seq.nextval, ?)
 
-select.realm.by.id = select * from dash_realm where id=?;
-select.realm.by.realm_id = select * from dash_realm where realm_id=?;
+select.Realm.by.id = select * from dash_realm where id=?;
+select.Realm.by.realmId = select * from dash_realm where realm_id=?;
 
-create.sourcetype.table = create table dash_sourcetype ( id number not null primary key, name varchar2(255) not null ); \
+create.SourceType.table = create table dash_sourcetype ( id number not null primary key, name varchar2(255) not null ); \
 create sequence dash_sourcetype_seq start with 1 increment by 1 nomaxvalue; \
 create unique index dash_source_idx on dash_sourcetype (name); 
 
-insert.sourcetype = insert into dash_sourcetype ( id, name) values (dash_sourcetype_seq.nextval, ?)
+insert.SourceType = insert into dash_sourcetype ( id, name) values (dash_sourcetype_seq.nextval, ?)
 
-select.sourcetype.by.id = select * from dash_sourcetype where id=?;
-select.sourcetype.by.name = select * from dash_sourcetype where name=?;
+select.SourceType.by.id = select * from dash_sourcetype where id=?;
+select.SourceType.by.name = select * from dash_sourcetype where name=?;
 
 
 
