place holder for Announcement event watcher. Clean up svn:ignore properties and eclipse files
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312816 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -37,6 +37,16 @@
 		    <artifactId>sakai-assignment-api</artifactId>
 	        <version>2.9-SNAPSHOT</version>
 	    </dependency>
+	    <dependency>
+		    <groupId>org.sakaiproject.announcement</groupId>
+		    <artifactId>sakai-announcement-api</artifactId>
+	        <version>2.9-SNAPSHOT</version>
+	    </dependency>
+	    <dependency>
+		<groupId>org.sakaiproject.message</groupId>
+		<artifactId>sakai-message-api</artifactId>
+	        <version>2.9-SNAPSHOT</version>
+	    </dependency>
 	</dependencies>
 	
 	<build />
