mysql script adjustions
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312818 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/hsqldb.properties
+++ b/impl/src/resources/hsqldb.properties
@@ -7,3 +7,5 @@ select.things = select * from PROJECT_THINGS where ID=?;
 select.things = select * from PROJECT_THINGS;
 
 insert.thing = insert into PROJECT_THINGS (TITLE) values (?)
+
+select.Context.by.contextId = select * from CONTEXT where ID=?
