--- a/impl/src/resources/mysql.properties
+++ b/impl/src/resources/mysql.properties
@@ -7,3 +7,56 @@ select.thing = select * from PROJECT_THINGS where ID=?
 select.things = select * from PROJECT_THINGS
 
 insert.thing = insert into PROJECT_THINGS (TITLE) values (?)
+
+
+## context table
+create.Context.table = create table dash_context ( id bigint(11) not null auto_increment primary key, context_id varchar(255) not null, context_url varchar(1024) not null, context_title varchar(255) not null ); 
+create unique index dash_context_idx on dash_context (context_id);
+
+insert.Context = insert into dash_context (context_id, context_url, context_title) values (?, ?, ?);
+
+
+select.Context.by.id = select * from dash_context where id=?;
+select.Context.by.contextId = select * from dash_context where context_id=?;
+
+## news item table
+create.NewsItem.table = create table dash_news_item ( id bigint(11) not null auto_increment primary key, news_time timestamp(0), title varchar(255) not null, access_url varchar(1024) not null, entity_ref varchar(300) not null, entity_type number not null, context_id number not null, realm_id number not null );  
+create index dash_news_time_idx on dash_news_item (news_time);  
+create unique index dash_news_entity_idx on dash_news_item (entity_ref);
+
+insert.NewsItem = insert into dash_news_item (news_time, title , access_url, entity_ref, source_type, context, realm) values (?, ?, ?, ?, ?, ?, ?);
+
+## news link table
+create.NewsLink.table = create table dash_news_link ( id bigint(11) not null auto_increment primary key, person_id number not null, context_id number not null, item_id number not null, realm_id number, hidden number(1,0) default 0, sticky number(1,0) default 0, unique (person_id, context_id, item_id) );  
+create index dash_news_link_idx on dash_news_link (person_id, context_id, item_id, hidden, sticky);
+
+insert.NewsLink = insert into dash_news_link (person_id, item_id, context_id, realm_id) values (?, ?, ?, ?);
+
+## person table
+create.Person.table = create table dash_person ( id bigint(11) not null auto_increment primary key,user_id varchar(99) not null,sakai_id varchar(99) );  
+create unique index dash_person_user_id_idx on dash_person (user_id);  
+create unique index dash_person_sakai_id_idx on dash_person (sakai_id);
+
+insert.Person = insert into dash_person (user_id,sakai_id) values (?, ?);
+
+select.Person.by.id = select * from dash_person where id=?;
+select.Person.by.userId = select * from dash_person where user_id=?;
+select.Person.by.sakaiId = select * from dash_person where sakai_id=?;
+
+## realm table
+create.Realm.table = create table dash_realm ( id bigint(11) not null auto_increment primary key, realm_id varchar(255) not null );  
+create unique index dash_realm_idx on dash_realm (realm_id);
+
+insert.Realm = insert into dash_realm (realm_id) values (?)
+
+select.Realm.by.id = select * from dash_realm where id=?;
+select.Realm.by.realmId = select * from dash_realm where realm_id=?;
+
+## resouce type table 
+create.SourceType.table = create table dash_sourcetype ( id bigint(11) not null auto_increment primary key, name varchar(255) not null );  
+create unique index dash_source_idx on dash_sourcetype (name); 
+
+insert.SourceType = insert into dash_sourcetype (name) values (?)
+
+select.SourceType.by.id = select * from dash_sourcetype where id=?;
+select.SourceType.by.name = select * from dash_sourcetype where name=?;
