name is a reserved word in MySQL. Hence change the column header.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312819 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/mysql.properties
+++ b/impl/src/resources/mysql.properties
@@ -20,14 +20,14 @@ select.Context.by.id = select * from dash_context where id=?;
 select.Context.by.contextId = select * from dash_context where context_id=?;
 
 ## news item table
-create.NewsItem.table = create table dash_news_item ( id bigint(11) not null auto_increment primary key, news_time timestamp(0), title varchar(255) not null, access_url varchar(1024) not null, entity_ref varchar(300) not null, entity_type number not null, context_id number not null, realm_id number not null );  
+create.NewsItem.table = create table dash_news_item ( id bigint(11) not null auto_increment primary key, news_time timestamp(0), title varchar(255) not null, access_url varchar(1024) not null, entity_ref varchar(300) not null, entity_type bigint(11) not null, context_id bigint(11) not null, realm_id bigint(11) not null );  
 create index dash_news_time_idx on dash_news_item (news_time);  
 create unique index dash_news_entity_idx on dash_news_item (entity_ref);
 
-insert.NewsItem = insert into dash_news_item (news_time, title , access_url, entity_ref, source_type, context, realm) values (?, ?, ?, ?, ?, ?, ?);
+insert.NewsItem = insert into dash_news_item (news_time, title , access_url, entity_ref, entity_type, context_id, realm_id) values (?, ?, ?, ?, ?, ?, ?);
 
 ## news link table
-create.NewsLink.table = create table dash_news_link ( id bigint(11) not null auto_increment primary key, person_id number not null, context_id number not null, item_id number not null, realm_id number, hidden number(1,0) default 0, sticky number(1,0) default 0, unique (person_id, context_id, item_id) );  
+create.NewsLink.table = create table dash_news_link ( id bigint(11) not null auto_increment primary key, person_id bigint(11) not null, context_id bigint(11) not null, item_id bigint(11) not null, realm_id bigint(11), hidden tinyint(1) default 0, sticky tinyint(1) default 0, unique (person_id, context_id, item_id) );  
 create index dash_news_link_idx on dash_news_link (person_id, context_id, item_id, hidden, sticky);
 
 insert.NewsLink = insert into dash_news_link (person_id, item_id, context_id, realm_id) values (?, ?, ?, ?);
@@ -53,10 +53,10 @@ select.Realm.by.id = select * from dash_realm where id=?;
 select.Realm.by.realmId = select * from dash_realm where realm_id=?;
 
 ## resouce type table 
-create.SourceType.table = create table dash_sourcetype ( id bigint(11) not null auto_increment primary key, name varchar(255) not null );  
-create unique index dash_source_idx on dash_sourcetype (name); 
+create.SourceType.table = create table dash_sourcetype ( id bigint(11) not null auto_increment primary key, source_type varchar(255) not null );  
+create unique index dash_source_idx on dash_sourcetype (source_type); 
 
-insert.SourceType = insert into dash_sourcetype (name) values (?)
+insert.SourceType = insert into dash_sourcetype (source_type) values (?)
 
 select.SourceType.by.id = select * from dash_sourcetype where id=?;
-select.SourceType.by.name = select * from dash_sourcetype where name=?;
+select.SourceType.by.sourcetype = select * from dash_sourcetype where source_type=?;
