--- a/impl/src/resources/oracle.properties
+++ b/impl/src/resources/oracle.properties
@@ -77,14 +77,14 @@ insert.Realm = insert into dash_realm (id, realm_id) values (dash_realm_seq.next
 select.Realm.by.id = select * from dash_realm where id=?;
 select.Realm.by.realmId = select * from dash_realm where realm_id=?;
 
-create.SourceType.table = create table dash_sourcetype ( id number not null primary key, name varchar2(255) not null ); \
+create.SourceType.table = create table dash_sourcetype ( id number not null primary key, source_type varchar2(255) not null ); \
 create sequence dash_sourcetype_seq start with 1 increment by 1 nomaxvalue; \
-create unique index dash_source_idx on dash_sourcetype (name); 
+create unique index dash_source_idx on dash_sourcetype (source_type); 
 
-insert.SourceType = insert into dash_sourcetype ( id, name) values (dash_sourcetype_seq.nextval, ?)
+insert.SourceType = insert into dash_sourcetype ( id, source_type) values (dash_sourcetype_seq.nextval, ?)
 
 select.SourceType.by.id = select * from dash_sourcetype where id=?;
-select.SourceType.by.name = select * from dash_sourcetype where name=?;
+select.SourceType.by.sourcetype = select * from dash_sourcetype where source_type=?;
 
 
 
