--- a/impl/src/resources/oracle.properties
+++ b/impl/src/resources/oracle.properties
@@ -18,11 +18,11 @@ create unique index dash_calendar_entity_idx on dash_calendar_item (entity_ref);
 insert.CalendarItem = insert into dash_calendar_item (id, calendar_time, title , access_url, entity_ref, source_type, context, realm) values (dash_calendar_item_seq.nextval, ?, ?, ?, ?, ?, ?, ?);
 
 select.CalendarItem.by.id = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.title as ci_title, ci.access_url as ci_access_url, \
-ci.entity_ref as ci_entity_ref, st.id as type_id, st.name as type_name, site.id as site_id, site.context_id as site_context_id,  \
+ci.entity_ref as ci_entity_ref, st.id as type_id, st.name as type_name, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title, r.id as r_id, r.realm_id as r_realm_id \
 join dash_sourcetype st on st.id=ci.source_type where ci.id=?;
 select.CalendarItem.by.entityReference = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.title as ci_title, ci.access_url as ci_access_url, \
-ci.entity_ref as ci_entity_ref, st.id as type_id, st.name as type_name, site.id as site_id, site.context_id as site_context_id,  \
+ci.entity_ref as ci_entity_ref, st.id as type_id, st.name as type_name, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title, r.id as r_id, r.realm_id as r_realm_id \
 from dash_calendar_item ci join dash_context site on site.id=ci.context join dash_realm r on r.id=ci.realm \
 join dash_sourcetype st on st.id=ci.source_type where ci.entity_ref=?;
@@ -41,8 +41,10 @@ create unique index dash_context_idx on dash_context (context_id);
 
 insert.Context = insert into dash_context (id, context_id, context_url, context_title) values (dash_context_seq.nextval, ?, ?, ?);
 
-select.Context.by.id = select * from dash_context where id=?;
-select.Context.by.contextId = select * from dash_context where context_id=?;
+select.Context.by.id = select site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title from dash_context site where site.id=?;
+select.Context.by.contextId = select site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title from dash_context site where site.context_id=?;
 
 create.NewsItem.table = create table dash_news_item ( id number not null primary key, news_time timestamp(0), title varchar2(255) not null, access_url varchar2(1024) not null, entity_ref varchar2(300) not null, entity_type number not null, context_id number not null, realm_id number not null ); \
 create sequence dash_news_item_seq start with 1 increment by 1 nomaxvalue; \
@@ -74,17 +76,17 @@ create unique index dash_realm_idx on dash_realm (realm_id);
 
 insert.Realm = insert into dash_realm (id, realm_id) values (dash_realm_seq.nextval, ?)
 
-select.Realm.by.id = select * from dash_realm where id=?;
-select.Realm.by.realmId = select * from dash_realm where realm_id=?;
+select.Realm.by.id = select r.id as r_id, r.realm_id as r_realm_id from dash_realm where id=?;
+select.Realm.by.realmId = select r.id as r_id, r.realm_id as r_realm_id from dash_realm where realm_id=?;
 
-create.SourceType.table = create table dash_sourcetype ( id number not null primary key, source_type varchar2(255) not null ); \
+create.SourceType.table = create table dash_sourcetype ( id number not null primary key, name varchar2(255) not null, access_permission varchar2(255) ); \
 create sequence dash_sourcetype_seq start with 1 increment by 1 nomaxvalue; \
 create unique index dash_source_idx on dash_sourcetype (source_type); 
 
-insert.SourceType = insert into dash_sourcetype ( id, source_type) values (dash_sourcetype_seq.nextval, ?)
+insert.SourceType = insert into dash_sourcetype ( id, name, access_permission) values (dash_sourcetype_seq.nextval, ?, ?)
 
-select.SourceType.by.id = select * from dash_sourcetype where id=?;
-select.SourceType.by.sourcetype = select * from dash_sourcetype where source_type=?;
+select.SourceType.by.id = select st.id as type_id, st.name as type_name, st.access_permission as type_accessPermission from dash_sourcetype where id=?;
+select.SourceType.by.name = select st.id as type_id, st.name as type_name, st.access_permission as type_accessPermission from dash_sourcetype where name=?;
 
 
 
