Attempting to do consistent replacement of "identifier" for "name" in SourceType everywhere.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312826 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/oracle.properties
+++ b/impl/src/resources/oracle.properties
@@ -18,11 +18,11 @@ create unique index dash_calendar_entity_idx on dash_calendar_item (entity_ref);
 insert.CalendarItem = insert into dash_calendar_item (id, calendar_time, title , access_url, entity_ref, source_type, context, realm) values (dash_calendar_item_seq.nextval, ?, ?, ?, ?, ?, ?, ?);
 
 select.CalendarItem.by.id = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.title as ci_title, ci.access_url as ci_access_url, \
-ci.entity_ref as ci_entity_ref, st.id as type_id, st.name as type_name, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+ci.entity_ref as ci_entity_ref, st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title, r.id as r_id, r.realm_id as r_realm_id \
 join dash_sourcetype st on st.id=ci.source_type where ci.id=?;
 select.CalendarItem.by.entityReference = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.title as ci_title, ci.access_url as ci_access_url, \
-ci.entity_ref as ci_entity_ref, st.id as type_id, st.name as type_name, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+ci.entity_ref as ci_entity_ref, st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title, r.id as r_id, r.realm_id as r_realm_id \
 from dash_calendar_item ci join dash_context site on site.id=ci.context join dash_realm r on r.id=ci.realm \
 join dash_sourcetype st on st.id=ci.source_type where ci.entity_ref=?;
@@ -79,14 +79,14 @@ insert.Realm = insert into dash_realm (id, realm_id) values (dash_realm_seq.next
 select.Realm.by.id = select r.id as r_id, r.realm_id as r_realm_id from dash_realm where id=?;
 select.Realm.by.realmId = select r.id as r_id, r.realm_id as r_realm_id from dash_realm where realm_id=?;
 
-create.SourceType.table = create table dash_sourcetype ( id number not null primary key, name varchar2(255) not null, access_permission varchar2(255) ); \
+create.SourceType.table = create table dash_sourcetype ( id number not null primary key, identifier varchar2(255) not null, access_permission varchar2(255) ); \
 create sequence dash_sourcetype_seq start with 1 increment by 1 nomaxvalue; \
 create unique index dash_source_idx on dash_sourcetype (source_type); 
 
-insert.SourceType = insert into dash_sourcetype ( id, name, access_permission) values (dash_sourcetype_seq.nextval, ?, ?)
+insert.SourceType = insert into dash_sourcetype ( id, identifier, access_permission) values (dash_sourcetype_seq.nextval, ?, ?)
 
-select.SourceType.by.id = select st.id as type_id, st.name as type_name, st.access_permission as type_accessPermission from dash_sourcetype where id=?;
-select.SourceType.by.name = select st.id as type_id, st.name as type_name, st.access_permission as type_accessPermission from dash_sourcetype where name=?;
+select.SourceType.by.id = select st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission from dash_sourcetype where id=?;
+select.SourceType.by.identifier = select st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission from dash_sourcetype where identifier=?;
 
 
 
